rename app and setup swagger docs
